--- a/fmh-android/app/build.gradle
+++ b/fmh-android/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "ru.iteco.fmhandroid"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 32
         versionCode 14
         versionName "1.0.0"
@@ -49,6 +49,7 @@ android {
 }
 
 dependencies {
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha07'
     def retrofit_version = "2.9.0"
     def retrofit_gson_version = "2.9.0"
     def okhttp_logging_version = "4.9.2"
@@ -109,14 +110,14 @@ dependencies {
 
      //Espresso Testing
     testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4-alpha07'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha07'
     androidTestImplementation "androidx.test:runner:1.4.0"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha07'
     implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
 
     //Allure
-    //androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.0.0"
+    androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.0.0"
 
 
 }
