Обновлена папка androidTest

--- a/fmhandroid/app/build.gradle
+++ b/fmhandroid/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     androidTestImplementation "androidx.test:runner:1.4.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha07'
     implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
 
     //Allure
     androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.0.0"
