--- a/fmhandroid/app/build.gradle
+++ b/fmhandroid/app/build.gradle
@@ -48,6 +48,7 @@ android {
     }
 }
 
+
 dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha07'
     def retrofit_version = "2.9.0"
@@ -119,6 +120,10 @@ dependencies {
 
     //Allure
     androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.0.0"
+    androidTestImplementation "io.qameta.allure:allure-kotlin-model:2.2.4"
+    androidTestImplementation "io.qameta.allure:allure-kotlin-commons:2.2.4"
+    androidTestImplementation "io.qameta.allure:allure-kotlin-junit4:2.2.4"
+    //androidTestImplementation "io.qameta.allure:allure-kotlin-android:$LATEST_VERSION"
 
 
 }
