--- a/fmhandroid/app/build.gradle
+++ b/fmhandroid/app/build.gradle
@@ -49,6 +49,8 @@ android {
 }
 
 
+
+
 dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha07'
 
@@ -103,6 +105,7 @@ dependencies {
     androidTestImplementation "androidx.test:core-ktx:$test_core_version"
     androidTestImplementation "androidx.test.ext:junit-ktx:$test_junit_version"
     androidTestImplementation "androidx.test:runner:$test_core_version"
+    //androidTestImplementation 'com.github.blocoio:faker:1.2.9'
 
     // UiAutomator Testing
     def uiautomator_version = "2.2.0"
@@ -120,7 +123,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
 
     //Allure
-    androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.0.0"
+    androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.4.0"
     androidTestImplementation "io.qameta.allure:allure-kotlin-model:2.4.0"
     androidTestImplementation "io.qameta.allure:allure-kotlin-commons:2.4.0"
     androidTestImplementation "io.qameta.allure:allure-kotlin-junit4:2.4.0"
