--- a/fmhandroid/app/build.gradle
+++ b/fmhandroid/app/build.gradle
@@ -105,6 +105,8 @@ dependencies {
     androidTestImplementation "androidx.test:core-ktx:$test_core_version"
     androidTestImplementation "androidx.test.ext:junit-ktx:$test_junit_version"
     androidTestImplementation "androidx.test:runner:$test_core_version"
+    testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    //testImplementation 'io.rest-assured:json-schema-validator:4.3.1'
     //androidTestImplementation 'com.github.blocoio:faker:1.2.9'
 
     // UiAutomator Testing
@@ -121,6 +123,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha07'
     implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
 
     //Allure
     androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.4.0"
