Добавлен файлNamingHelper.java

--- a/fmhandroid/app/build.gradle
+++ b/fmhandroid/app/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit-ktx:$test_junit_version"
     androidTestImplementation "androidx.test:runner:$test_core_version"
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    //testImplementation 'com.github.javafaker:javafaker:1.0.2'
     //testImplementation 'io.rest-assured:json-schema-validator:4.3.1'
     //androidTestImplementation 'com.github.blocoio:faker:1.2.9'
 
